	  and get_kbinput(). (Benno Schulenberg, minor tweaks by DLR)
	- Handle prepending of wrapped text in one place instead of
	  many, so that it always works consistently.  Changes to
	  do_uncut_text(), do_insertfile(), do_page_up(),
	  do_page_down(), do_up(), do_scroll_up(), do_down(),
	  do_scroll_down(), do_input(), do_search(), do_research(), and
	  do_delete(). (DLR)
- browser.c:
  do_browser()
	- Reference NANO_GOTODIR_(ALT|F)?KEY instead of
	  NANO_GOTOLINE_(ALT|F)?KEY for the "Go to Directory" shortcut.
	  (DLR)
  parse_browser_input()
	- Remove redundant key checks. (DLR)
  browser_refresh()
	- Rename variable editline to line, for consistency. (DLR)
	- Change variable i from an int to a size_t in order to match
	  selected, which it's compared against. (DLR)
- cut.c:
  cut_to_eof()
	- New function, containing the main functionality of
	  do_cut_till_end(). (DLR)
  do_cut_text()
	- Add parameter cut_till_end, to indicate when we're cutting
	  from the current cursor position to the end of the file, and
	  call cut_to_eof() when it's TRUE. (DLR)
  do_cut_till_end()
	- Convert to a wrapper for do_cut_text(). (DLR)
- files.c:
  open_file()
	- Remove redundant wording in the error message when we try to
	  open a device file. (DLR)
  safe_tempfile()
	- Don't ignore $TMPDIR if it's set but blank, for consistency.
	  (DLR)
  write_file()
	- Don't free backupname before displaying it in a statusbar error
	  message. (DLR, found by Bill Marcum)
	- If we can't save the backup file for some reason, at least
	  save the original file, if possible, since that's better than
	  saving nothing. (DLR, problem found by Bill Marcum, solution
	  suggested by Jordi)
	- Clarify the error messages when creating a temporary file or
	  writing one for prepending fails. (DLR)
	- Simplify the routine for closing the file just before we
	  indicate success on the statusbar. (DLR)
  free_chararray()
	- Assert that array isn't NULL, for consistency with the other