@@ -120,6 +120,13 @@ bool is_blank_mbchar(const char *c)
 	return isblank((unsigned char)*c);
 }
 
+/* This function is equivalent to iscntrl(), except in that it only
+ * handles non-high-bit control characters. */
+bool is_ascii_cntrl_char(int c)
+{
+    return (0 <= c && c < 32);
+}
+
 /* This function is equivalent to iscntrl(), except in that it also
  * handles high-bit control characters. */
 bool is_cntrl_char(int c)
