@@ -1297,6 +1297,17 @@ int do_input(bool *meta_key, bool *func_key, bool *s_or_t, bool
 #endif
 	);
 
+    /* If we got a non-high-bit control key or a Meta key sequence, and
+     * it's not a shortcut or toggle, ignore it, and indicate this on
+     * the statusbar. */
+    if (*s_or_t == FALSE) {
+	if (is_ascii_cntrl_char(input) || *meta_key == TRUE) {
+	    input = ERR;
+	    *meta_key = FALSE;
+	    statusbar(_("Unknown Command"));
+	}
+    }
+
     if (allow_funcs) {
 	/* If we got a character, and it isn't a shortcut or toggle,
 	 * it's a normal text character.  Display the warning if we're
